--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,3 @@
 <% @posts.each do |post| %>
-    <div><%= link to "post", post_path(post)%></a></div>
+    <div><%= link_to post.title, post_path(post)%></a></div>
   <% end %>
